--- a/README.html
+++ b/README.html
@@ -17,6 +17,13 @@ extension <em>programs</em>. Now it only supports extension <em>packages</em>.
 Also added support to <b><tt>sysconfig</tt></b> for updating previously
 installed extension packages when newer packages have been released.</li>
 <li>12 January 2021 -- Upgraded the .Net runtime to 5.0.2.</li>
+<li>15 January 2021 -- Renamed the <b><tt>EMBLINUXBASE</tt></b> environment
+variable to <b><tt>MUNTSOS</tt></b>.</li>
+<li>20 January 2021 -- Added <a href="http://xmlrpc.com">XML-RPC</a> client and
+server shared library extension packages.</li>
+<li>2 February 2021 -- Upgraded the BeagleBone kernel to 5.4.87. Upgraded the
+Raspberry Pi kernel to 5.10.11. Upgraded BusyBox to 1.32.1, ethtool to 5.10,
+mailutils to 3.11.1, and nano to 5.5.</li>
 </ul>
 <h2>Embedded Linux Distribution in a Kernel</h2>
 <p>MuntsOS is a stripped down Linux distribution that includes a small
