Upgraded the Raspberry Pi kernel to 5.10.13.
Upgraded library components.
Added MQTT client library.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19220 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -24,6 +24,11 @@ server shared library extension packages.</li>
 <li>2 February 2021 -- Upgraded the BeagleBone kernel to 5.4.87. Upgraded the
 Raspberry Pi kernel to 5.10.11. Upgraded BusyBox to 1.32.1, ethtool to 5.10,
 mailutils to 3.11.1, and nano to 5.5.</li>
+<li>6 February 2021 -- Upgraded the Raspberry Pi kernel to 5.10.13. Upgraded
+libusb to 1.0.24, OpenSSL to 1.1.1i, curl to 7.75.0, libtirpc to 1.3.1, libpcap
+to 1.10.0, gdbm to 1.19 and zeromq to 4.3.4. Added the <a href=
+"https://github.com/eclipse/paho.mqtt.c">Eclipse Paho MQTT C client
+library</a>.</li>
 </ul>
 <h2>Embedded Linux Distribution in a Kernel</h2>
 <p>MuntsOS is a stripped down Linux distribution that includes a small
