Added quick setup instructions.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19226 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-<h1>MuntsOS Embedded Linux Framework</h1>
+<h1>MuntsOS Embedded Linux</h1>
 <p>This framework supports Linux on several single board microcomputers. The
 goal of the MuntsOS project is to deliver a turnkey, RAM resident Linux
 operating system for very low cost single board microcomputers. With MuntsOS
@@ -30,6 +30,18 @@ to 1.10.0, gdbm to 1.19 and zeromq to 4.3.4. Added the <a href=
 "https://github.com/eclipse/paho.mqtt.c">Eclipse Paho MQTT C client
 library</a>.</li>
 </ul>
+<h2>Quick Setup Instructions for the Impatient</h2>
+<p>Instructions for setting up the MuntsOS cross-toolchain development
+environment are found in <a href=
+"http://git.munts.com/muntsos/doc/AppNote1-Setup-Debian.pdf">Application Note
+#1</a> and <a href=
+"http://git.munts.com/muntsos/doc/AppNote2-Setup-Other.pdf">Application Note
+#2</a>.</p>
+<p>Instructions for installing MuntsOS to a target board are found in <a href=
+"http://git.munts.com/muntsos/doc/AppNote3-Installation-from-Linux.pdf">Application
+Note #3</a> and <a href=
+"http://git.munts.com/muntsos/doc/AppNote15-Installation-from-Windows.pdf">Application
+Note #15</a>.</p>
 <h2>Embedded Linux Distribution in a Kernel</h2>
 <p>MuntsOS is a stripped down Linux distribution that includes a small
 compressed root file system within the kernel image binary itself. At boot time
