Upgraded the .Net runtime to 5.0.3.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19234 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -29,6 +29,7 @@ libusb to 1.0.24, OpenSSL to 1.1.1i, curl to 7.75.0, libtirpc to 1.3.1, libpcap
 to 1.10.0, gdbm to 1.19 and zeromq to 4.3.4. Added the <a href=
 "https://github.com/eclipse/paho.mqtt.c">Eclipse Paho MQTT C client
 library</a>.</li>
+<li>10 February 2021 -- Upgraded the .Net runtime to 5.0.3.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
