--- a/README.html
+++ b/README.html
@@ -30,6 +30,8 @@ to 1.10.0, gdbm to 1.19 and zeromq to 4.3.4. Added the <a href=
 "https://github.com/eclipse/paho.mqtt.c">Eclipse Paho MQTT C client
 library</a>.</li>
 <li>10 February 2021 -- Upgraded the .Net runtime to 5.0.3.</li>
+<li>12 February 2021 -- Cross-toolchain packages compiled for Debian arm64 (aka
+AArch64 aka ARMv8) are now available.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
