--- a/README.html
+++ b/README.html
@@ -40,7 +40,10 @@ OpenSSH to 8.5p1. Upgraded nano to 5.6.1. Upgraded the .Net runtime to
 5.0.4.</li>
 <li>6 April 2021 -- Upgraded the BeagleBone kernel to 5.4.106. Upgraded the
 Raspberry Pi kernel to 5.10.25. Improved support for Internet Connection
-Sharing in <b><tt>netconfig</tt></b> and <b><tt>sysconfig</tt></b>.</li>
+Sharing in <b><tt>netconfig</tt></b> and <b><tt>sysconfig</tt></b>. Upgraded
+the .Net Runtime to 5.0.5.</li>
+<li>12 April 2021 -- Upgraded the Raspberry Pi kernel to 5.10.27. Modified
+<b><tt>sysconfig</tt></b> to not kill <b><tt>sshd</tt></b> anymore.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
