Upgraded the Raspberry Pi kernel to 5.10.39. Upgraded the .Net runtime to 5.0.6.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19695 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -46,6 +46,8 @@ the .Net Runtime to 5.0.5.</li>
 <b><tt>sysconfig</tt></b> to not kill <b><tt>sshd</tt></b> anymore.</li>
 <li>24 April 2021 -- Upgraded the Raspberry Pi kernel to 5.10.31. Upgraded
 OpenSSH to 8.6p1.</li>
+<li>19 May 2021 -- Upgraded the .Net runtime to 5.0.6.</li>
+<li>28 May 2021 -- Upgraded the Raspberry Pi kernel to 5.10.39.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
