Lots of component upgrades
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19703 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -48,6 +48,12 @@ the .Net Runtime to 5.0.5.</li>
 OpenSSH to 8.6p1.</li>
 <li>19 May 2021 -- Upgraded the .Net runtime to 5.0.6.</li>
 <li>28 May 2021 -- Upgraded the Raspberry Pi kernel to 5.10.39.</li>
+<li>1 June 2021 -- Upgraded some root file system software components: BusyBox
+to 1.33.1, rpcbind to 1.2.6, ethtool to 5.12, and nano to 5.7. Upgraded some
+toolchain library software components: OpenSSL to 1.1.1k, curl to 7.77.0,
+libtirpc to 1.3.2, MySQL client library (aka Mariadb Connector/C) to 3.1.13,
+Paho MQTT client library to 1.3.9, and the RabbitMQ client library to 0.11.0.
+Also imported the latest Raspberry Pi boot files from Raspberry Pi OS.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
