--- a/README.html
+++ b/README.html
@@ -54,6 +54,8 @@ toolchain library software components: OpenSSL to 1.1.1k, curl to 7.77.0,
 libtirpc to 1.3.2, MySQL client library (aka Mariadb Connector/C) to 3.1.13,
 Paho MQTT client library to 1.3.9, and the RabbitMQ client library to 0.11.0.
 Also imported the latest Raspberry Pi boot files from Raspberry Pi OS.</li>
+<li>10 June 2021 -- Upgraded the .Net runtime to 5.0.7. Added <a href=
+"https://w1.fi/hostapd">hostapd</a> extension packages.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
