Added support for some RTC devices.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19715 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -56,6 +56,8 @@ Paho MQTT client library to 1.3.9, and the RabbitMQ client library to 0.11.0.
 Also imported the latest Raspberry Pi boot files from Raspberry Pi OS.</li>
 <li>10 June 2021 -- Upgraded the .Net runtime to 5.0.7. Added <a href=
 "https://w1.fi/hostapd">hostapd</a> extension packages.</li>
+<li>11 June 2021 -- Added support for a number of I<sup>2</sup>C RTC (Real Time
+Clock) devices to the Raspberry Pi kernels.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
