Upgraded the .Net runtime to 5.0.8.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19748 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -58,14 +58,15 @@ Also imported the latest Raspberry Pi boot files from Raspberry Pi OS.</li>
 "https://w1.fi/hostapd">hostapd</a> extension packages.</li>
 <li>11 June 2021 -- Added support for a number of I<sup>2</sup>C RTC (Real Time
 Clock) devices to the Raspberry Pi kernels.</li>
-<li>13 July 2021 -- Upgraded the Raspberry Pi kernel to 5.10.48. Added code to
-<b><tt>/etc/rc</tt></b> to load kernel modules specified in
-<b><tt>/etc/modules</tt></b>. Added code to <b><tt>/etc/rc</tt></b> to reload
-<b><tt>/etc/inittab</tt></b> at the end of the system boot process. Enabled
-kernel support for Raspberry Pi camera modules. Added an RTSP video server
-extension package. Many thanks to Faisal Puthuparackat for his work to bring up
-support for the Raspberry Pi camera interface in MuntsOS, and to port
-<b><tt>v4l2rtspserver</tt></b> to MuntsOS.</li>
+<li>13 July 2021 -- Upgraded the Raspberry Pi kernel to 5.10.48. Upgraded the
+.Net runtime to 5.0.8. Added code to <b><tt>/etc/rc</tt></b> to load kernel
+modules specified in <b><tt>/etc/modules</tt></b>. Added code to
+<b><tt>/etc/rc</tt></b> to reload <b><tt>/etc/inittab</tt></b> at the end of
+the system boot process. Enabled kernel support for Raspberry Pi camera
+modules. Added an RTSP video server extension package. Many thanks to Faisal
+Puthuparackat for his work to bring up support for the Raspberry Pi camera
+interface in MuntsOS, and to port <b><tt>v4l2rtspserver</tt></b> to
+MuntsOS.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
