More software component updates.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19892 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -67,6 +67,10 @@ modules. Added an RTSP video server extension package. Many thanks to Faisal
 Puthuparackat for his work to bring up support for the Raspberry Pi camera
 interface in MuntsOS, and to port <b><tt>v4l2rtspserver</tt></b> to
 MuntsOS.</li>
+<li>13 August 2021 -- Lots of software component updates: Upgraded curl to
+7.78.0, libpcap to 1.10.1, MariaDB Connector/C to 3.2.3, and gdbm to 1.20.
+Upgraded ethtool to 5.13, mailutils to 3.13, and nano to 5.8. Upgraded the
+Raspberry Pi kernel to 5.10.52. Upgraded the .Net runtime to 5.0.9.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
