Upgraded the Raspberry Pi kernel to 5.10.82.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20141 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -90,6 +90,8 @@ organization of library directories is radically different between the
 Crosstool-NG and Linaro based cross-toolchains I have been using and the new
 Debian cross-toolchains, and it will be a lot of work to modify the build
 procedure to work.</li>
+<li>30 November 2021 -- Upgraded <b><tt>nupkg</tt></b> for .Net 5 and .Net 6.
+Upgraded the Raspberry Pi kernel to 5.10.82.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for setting up the MuntsOS cross-toolchain development
